{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerActions",
            "id": "31556841-f397-440f-8948-915e06c737c0",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "08ea8d25-42eb-4b01-82d9-cb91d4c90457",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "05c8025f-0382-4b54-8d70-189d8100a705",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "23e747cb-9d90-4aae-b4ba-89e08751cbe2",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0e353c5-709a-4d16-9c55-d17a154c4601",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}